Consultar la cantidad de cuotas esta funcional.

--- a/src/dulcehogar/EjecucionAplicacion.form
+++ b/src/dulcehogar/EjecucionAplicacion.form
@@ -67,6 +67,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Consultar N* Cuotas por Cancelar"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mnt_numeroActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
